[gd_scene load_steps=14 format=3 uid="uid://cgxnufilggt3b"]

[ext_resource type="Script" path="res://Scripts/Levels/level_selection.gd" id="1_l1eys"]
[ext_resource type="Texture2D" uid="uid://6o7ekobii1gc" path="res://Resources/Backgrounds/background_0.png" id="2_7i7sk"]
[ext_resource type="PackedScene" uid="uid://cav6x5jkkvacs" path="res://Scenes/Objects/Character.tscn" id="2_8lr3s"]
[ext_resource type="PackedScene" uid="uid://cbepccfer7xkg" path="res://Scenes/Objects/Platforms And Ground/Grass_Ground.tscn" id="3_mf38k"]
[ext_resource type="Texture2D" uid="uid://c4621iwxj3xne" path="res://Resources/Tilesets/Forest_Tileset.png" id="4_3cbh0"]
[ext_resource type="PackedScene" uid="uid://gc50v3b5j1o4" path="res://Scenes/Objects/Blue_Portal.tscn" id="6_r4h28"]
[ext_resource type="PackedScene" path="res://Scenes/Objects/Key_Fragment.tscn" id="7_mdg8j"]
[ext_resource type="Texture2D" uid="uid://da2evg462utta" path="res://Resources/Sprites/Objects/Door.png" id="8_rr0vp"]
[ext_resource type="PackedScene" uid="uid://c2qva6six3ws4" path="res://Scenes/Objects/Dialog_Area.tscn" id="9_piu7l"]
[ext_resource type="Texture2D" uid="uid://ciprtelthov22" path="res://Resources/Sprites/NPCs/NPC_Wizard_Idle_Sheet.png" id="11_q6ek0"]
[ext_resource type="Script" path="res://Scripts/npc_play_idle.gd" id="12_4frrx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_brq78"]
atlas = ExtResource("4_3cbh0")
region = Rect2(176, 8, 104, 136)

[sub_resource type="Animation" id="Animation_affer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v2hi2"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cejyd"]
_data = {
"RESET": SubResource("Animation_affer"),
"idle": SubResource("Animation_v2hi2")
}

[node name="LevelSelection" type="Node2D"]
script = ExtResource("1_l1eys")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1280, -512)
scale = Vector2(9, 9)
texture = ExtResource("2_7i7sk")

[node name="GrassGround" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(0, -64)

[node name="GrassGround2" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(0, -576)
rotation = 1.5708

[node name="GrassGround3" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(512, -64)

[node name="GrassGround4" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(1024, -64)

[node name="GrassGround5" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(1536, -64)

[node name="GrassGround6" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(2048, -64)

[node name="GrassGround7" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(2560, -64)
rotation = -1.5708

[node name="GrassGround8" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(256, -64)

[node name="GrassGround9" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(768, -64)

[node name="GrassGround10" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(1280, -64)

[node name="GrassGround11" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(1792, -64)

[node name="GrassGround12" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(2304, -64)

[node name="GrassGround13" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(2560, -320)
rotation = -1.5708

[node name="GrassGround14" parent="." instance=ExtResource("3_mf38k")]
position = Vector2(0, -320)
rotation = 1.5708

[node name="Door4" type="Sprite2D" parent="."]
position = Vector2(1003, -172)
scale = Vector2(1.81481, 1.81481)
texture = ExtResource("8_rr0vp")

[node name="Door3" type="Sprite2D" parent="."]
position = Vector2(1353, -172)
scale = Vector2(1.81481, 1.81481)
texture = ExtResource("8_rr0vp")

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(623, -171)
scale = Vector2(1.7963, 1.7963)

[node name="Tree" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1797, -404)
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_brq78")

[node name="player" parent="." instance=ExtResource("2_8lr3s")]
z_index = 30
position = Vector2(81, -92)

[node name="Door2" type="Sprite2D" parent="."]
position = Vector2(622, -172)
scale = Vector2(1.81481, 1.81481)
texture = ExtResource("8_rr0vp")

[node name="Level_1_Door_Interaction" parent="." instance=ExtResource("9_piu7l")]
position = Vector2(622, -104)

[node name="Level_2_Door_Interaction" parent="." instance=ExtResource("9_piu7l")]
position = Vector2(1003, -96)

[node name="Wizard_NPC" type="Sprite2D" parent="."]
position = Vector2(387, -91)
texture = ExtResource("11_q6ek0")
hframes = 4
script = ExtResource("12_4frrx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wizard_NPC"]
libraries = {
"": SubResource("AnimationLibrary_cejyd")
}

[node name="NPC_Dialog" parent="." instance=ExtResource("9_piu7l")]
position = Vector2(385, -96)

[node name="Level_3_Door_Interaction" parent="." instance=ExtResource("9_piu7l")]
position = Vector2(1352, -95)
